fixing the nav issue where it covers the body

--- a/src/Components/calculator/calculator.css
+++ b/src/Components/calculator/calculator.css
@@ -1,3 +1,4 @@
 .calculator {
     max-width: 15% !important;
+    margin-top: 100px;
 }
