--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -11,7 +11,7 @@
 }
 
 .vcentermid {
-    height: 75vh;
+    height: 75vh !important;
 }
 
 article {
